feat: added login and registration pages

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -11,5 +11,6 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     // color: white;
-    background-color: #F2F3FB;
+    // background-color: #F2F3FB;
+    // background-color: #EDEDED;
 }
