--- a/client/src/components/pages/HomePage/HomePage.scss
+++ b/client/src/components/pages/HomePage/HomePage.scss
@@ -42,6 +42,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
+            flex-grow: 1;
         }
 
         button {
@@ -67,7 +68,8 @@
     }
 
     .shape-fill {
-        fill: #F2F3FB;
+        // fill: #F2F3FB;
+        fill: #fff;
     }
 }
 
