feat: Personal Page

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -12,5 +12,5 @@ body {
     font-size: 14px;
     // color: white;
     // background-color: #F2F3FB;
-    // background-color: #EDEDED;
+    background-color: #F5F5F5;
 }
