--- a/client/src/components/pages/HomePage/HomePage.scss
+++ b/client/src/components/pages/HomePage/HomePage.scss
@@ -74,8 +74,7 @@
     }
 
     .shape-fill {
-        // fill: #F2F3FB;
-        fill: #fff;
+        fill: #F5F5F5;
     }
 }
 
@@ -97,21 +96,3 @@
     }
 }
 
-// .url-input {
-//     // background-color: white;
-//     width: 60%;
-//     padding: 15px 30px;  
-//     position: relative;
-
-//     input {
-//         color: #262626;
-//         font-size: 1.1em;    
-//     }
-//     // button {
-//     //     position: absolute;
-//     //     // right: 8px;
-//     //     top: 7px;
-//     //     font-size: 25px;
-//     //     // color: rgba($color: #24305E, $alpha: 0.9);
-//     // }
-// }
