Bind server login with client

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -14,3 +14,8 @@ body {
     // background-color: #F2F3FB;
     background-color: #F5F5F5;
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
