--- a/client/src/components/AuthForm/AuthForm.scss
+++ b/client/src/components/AuthForm/AuthForm.scss
@@ -7,7 +7,13 @@
     }
 
     h1 {
-        margin: 24px;
+        margin-bottom: 16px;
+
+        + p {
+            color: #EF4135;
+            font-weight: 500;
+            margin-bottom: 16px;
+        }
     }
 
     form {
