--- a/client/src/components/Navigation/Navigation.scss
+++ b/client/src/components/Navigation/Navigation.scss
@@ -3,4 +3,8 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
+
+    h6 {
+        cursor: pointer;
+    }
 }
