--- a/client/src/components/Shortener/Shortener.scss
+++ b/client/src/components/Shortener/Shortener.scss
@@ -52,20 +52,11 @@
         display: flex;
         justify-content: center;
         text-decoration: none;
-    }
+        padding-top: 40px;
 
-    &__result {
-        // margin: 0 auto;
-        margin-top: 40px;
-        font-weight: 500!important;
-        height: 40px!important;
-        font-size: 1em!important;
-        border-radius: 60px!important;
-        cursor: pointer!important;
-        box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
-
-        &:hover {
-            background-color:#c51162;
+        .MuiChip-label {
+            font-size: 0.88rem;
+            padding: 7px 16px;
         }
     }
 
