feat: Links list

--- a/client/src/components/Shortener/Shortener.scss
+++ b/client/src/components/Shortener/Shortener.scss
@@ -30,9 +30,9 @@
     &__small-input__container {
         margin-top: 30px!important;
 
-        p {
-            font-weight: 700;
-        }
+        // p {
+        //     font-weight: 700;
+        // }
 
         &:last-child {
             margin-top: -20px!important;
