--- a/client/src/components/LinkItem/LinkItem.scss
+++ b/client/src/components/LinkItem/LinkItem.scss
@@ -9,6 +9,19 @@
         max-width: 250px;
         margin-left: 10px;
     }
+
+    &__edit-text {
+        padding: 5px!important;
+        // background-color: red;
+    }
+
+    &__edit-form {
+        padding: 20px 0;
+    }
+
+    &__update-btn {
+        margin-top: 17px!important;
+    }
 }
 
 .link-dest-cell {
