Fix mobile layout

--- a/client/src/components/AuthForm/AuthForm.scss
+++ b/client/src/components/AuthForm/AuthForm.scss
@@ -2,6 +2,11 @@
     width: 45%;
     padding: 3%;
     
+
+    @media screen and (max-width: 600px) {
+        width: 85%;
+    }       
+
     .Mui-avatar {
         margin: 16px;
     }
