--- a/client/src/components/Navigation/Navigation.scss
+++ b/client/src/components/Navigation/Navigation.scss
@@ -7,4 +7,12 @@ nav {
     h6 {
         cursor: pointer;
     }
+
+    @media screen and (max-width: 1000px) {
+        min-width: 40%;
+    }
+
+    @media screen and (max-width: 600px) {
+        min-width: 60%;
+    }
 }
