--- a/client/src/components/AppHeader/AppHeader.scss
+++ b/client/src/components/AppHeader/AppHeader.scss
@@ -5,12 +5,16 @@
     right: 0;
     z-index: 2;
     width: 100%;
-    // background-color: transparent;
 
     &__container {
         padding: 15px 0;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
+    
+        @media screen and (max-width: 600px) {
+            align-items: flex-end;
+        }
     }
 }
