--- a/client/src/components/pages/AuthPages/AuthPage.scss
+++ b/client/src/components/pages/AuthPages/AuthPage.scss
@@ -3,4 +3,8 @@
     justify-content: center;
     align-items: center;
     height: 90vh;
+
+    @media screen and (max-width: 600px) {
+        height: 100vh;
+    }       
 }
