--- a/client/src/components/pages/HomePage/HomePage.scss
+++ b/client/src/components/pages/HomePage/HomePage.scss
@@ -8,8 +8,9 @@
         position: relative;
         width: 100%; 
         height: 700px; 
-        background-size: 100%;
+        // background-size: 100%;
         background-position: center;
+        background-repeat: no-repeat;
         background-image: url('/img/background_home.jpg');
 
         &__container {
@@ -22,11 +23,21 @@
                 font-size: 4.2em;
                 font-weight: 700;
                 margin-bottom: 0.2em;
+                text-align: center;
+
+                @media screen and (max-width: 600px) {
+                    font-size: 3.5em;
+                }        
             }
     
             h3 {
                 font-size: 2.5em;
                 font-weight: 300;
+                text-align: center;
+
+                @media screen and (max-width: 600px) {
+                    font-size: 1.5em;
+                }        
             }
     
         }
@@ -42,6 +53,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
+            flex-wrap: wrap;
             flex-grow: 1;
         }
 
@@ -54,6 +66,10 @@
     .shortener {
         margin-top: 90px;
         width: 60%;
+
+        @media screen and (max-width: 600px) {
+            width: 100%;
+        }
     }
     
 }
@@ -94,5 +110,11 @@
         margin: 0 auto 10px auto;
         color: #24305E;
     }
+
+    @media screen and (max-width: 600px) {
+        width: 80%;
+        margin-bottom: 20px;
+    }        
+
 }
 
